# RapidQuadcopterCollisionDetection

./: CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.hpp  ConvexObj.hpp  CylinderSampleGenerator.hpp  Doxyfile  ForestPerfEval_main.cpp  README.md  RectPrism.hpp  RectPrismSampleGenerator.hpp  Rotation.hpp  SampleGenerator.hpp  SingleAxisTrajectory.hpp  Sphere.hpp  StateFeasPerfEval_main.cpp  StoppingTrajFinder.hpp  TimeSampleGenerator.hpp  Trajectory.hpp  TrajectoryGenerator.hpp  Vec3.hpp
data/: ForestPerfEval.csv  ForestPerfEval.txt  ForestPerfEvaltreeParamsCSV.csv  PerformanceEval.txt
doc/html/: CollisionChecker_8hpp_source.html  ConvexObj_8hpp_source.html  Link to index.html  RapidTrajectoryGenerator_8hpp_source.html  RectPrismSampleGenerator_8hpp_source.html  RectPrism_8hpp_source.html  Rotation_8hpp_source.html  SampleGenerator_8hpp_source.html  SingleAxisTrajectory_8hpp_source.html  Sphere_8hpp_source.html  StoppingTrajFinder_8hpp_source.html  TimeSampleGenerator_8hpp_source.html  Trajectory_8hpp_source.html  Vec3_8hpp_source.html  annotated.html  autotoc_md0.html  classCollisionChecker.html  classCommonMath_1_1ConvexObj.html  classCommonMath_1_1RectPrism.html  classCommonMath_1_1Rotation.html  classCommonMath_1_1Sphere.html  classCommonMath_1_1Trajectory.html  classCommonMath_1_1Vec3.html  classRapidCollisionChecker_1_1CollisionChecker.html  classRapidQuadrocopterTrajectoryGenerator_1_1RapidTrajectoryGenerator.html  classRapidQuadrocopterTrajectoryGenerator_1_1RectPrismSampleGenerator.html  classRapidQuadrocopterTrajectoryGenerator_1_1SampleGenerator.html  (+48 more)
scripts/: plotSingleForestBatch.py
src/: CMakeLists.txt  CollisionChecker.cpp  RapidTrajectoryGenerator.cpp  SingleAxisTrajectory.cpp  StoppingTrajFinder.cpp  TrajectoryGenerator.cpp  quartic.cpp
test/: CMakeLists.txt  ExampleStoppingTraj.cpp  ForestPerformanceEval.cpp  PerformanceEval.cpp
(+61 files in other folders)
